신고 상태(status) 값을 테이블에 표시